deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: md-dynamic-forms-app
  labels:
    app.kubernetes.io/name: md-dynamic-forms-app
spec:
  selector:
    app.kubernetes.io/name: md-dynamic-forms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
