deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: md-dynamic-forms-app
spec:
  rules:
    - host: 'md-dynamic-forms-app.officialmkl.cloud.okteto.net'
      http:
        paths:
          - path: '/'
            backend:
              serviceName: md-dynamic-forms-app
              servicePort: 80
